-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: jfx12
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222341 | jfx11.0.3 | Arunprasad Rajkumar | P3 | Closed | Fixed | |
| JDK-8217591 | 8u212 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b03 |
| JDK-8217488 | 8u211 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b03 |
- backported by
-
JDK-8217488 Complex text is not rendered by webkit on Windows
-
- Resolved
-
-
JDK-8217591 Complex text is not rendered by webkit on Windows
-
- Resolved
-
-
JDK-8222341 Complex text is not rendered by webkit on Windows
-
- Closed
-
- relates to
-
JDK-8214119 Update to 607.1 version of WebKit
-
- Resolved
-
- links to