8215799: Complex text is not rendered by webkit on Windows

Reviewed-by: mbilla, kcr, prr